# DocsVision

./: Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt  train.ipynb  use.ipynb
bot/: __main__.py
bot/core/: config.py  loader.py
bot/files/: federalnyi-zakon-ot-08112007-n-259-fz-ustav.rtf  soglashenie-o-vzaimodeistvii-generalnoi-prokuratury-rossiiskoi-federatsii_3.rtf  ustav-federalnoi-notarialnoi-palaty-utv-fnp-22091993_1.rtf
bot/filters/: document.py  media.py
bot/handlers/: __init__.py  check_documents.py  null.py  start.py
bot/lib/: mistral.py  rtf_parser.py  type_checker.py
bot/middlewares/: __init__.py  album.py  logging.py  throttling.py
bot/states/: user.py
classification/: classification.py  config.py
core/: config.py  loader.py
filters/: text.py
handlers/: __init__.py  admin.py  bot_ban.py  channel.py  export_users.py  get_anal.py  get_geo.py  gpus.py  language.py  mailer.py  mask_generate.py  notifications.py  processings.py  profile.py  rates.py
keyboards/: default_commands.py
keyboards/default/: basic.py  consts.py  geo.py
keyboards/inline/: channel.py  gen_params.py  gpus.py  languages.py  mailer.py  misc.py  notifications.py  payments.py  processings.py  rates.py  styles.py
kube/bot/: bot-deployment.yaml
kube/gradio/: gradio-deployment.yaml  gradio-ingress.yaml  gradio-service.yaml
lib/: type_checker.py
middlewares/: auth.py  metrics.py  referral.py  scheduler.py  throttling.py
model_api/: config.py  main.py  model.py  requirements.txt
site/: Dockerfile  config.py  main.py
(+14 files in other folders)
